// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PTalkInfo should render when props undefined 1`] = `
<DocumentFragment>
  <h2
    class="styled__Title-sc-15n5q1r-1 fcJQjR"
  />
  <div
    class="styled__SpeakerContainer-sc-15n5q1r-3 frTQVi"
  >
    <div
      class="styled__Speaker-sc-15n5q1r-4 evdChA"
    />
    <div
      style="padding-right: 20px;"
    />
  </div>
  <div
    class="styled__Content-sc-15n5q1r-5 dDpWS"
  />
  <div
    class="styled__SocialHeader-sc-15n5q1r-7 hLQyhj"
  >
    <img
      class="styled__TalkIcon-sc-15n5q1r-8 ivFrYX"
      src="/cndt2022/ui/talk_icon.png"
    />
    一緒に盛り上がろう
  </div>
  <div
    class="styled__ButtonContainer-sc-15n5q1r-9 gzQWDE"
  >
    <a
      class="styled__ButtonLink-sc-15n5q1r-10 kelDkq"
      href="http://twitter.com/share?url=https://event.cloudnativedays.jp/cndt2022&related=@cloudnativedays&hashtags=cndt2022"
      target="_blank"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text styled__TweetButton-sc-15n5q1r-13 hixsbY"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <img
            class="styled__TwitterImg-sc-15n5q1r-14 hQZdtG"
            src="/cndt2022/ui/twitter_logo.png"
          />
          tweet #cndt2022_undefined
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </a>
  </div>
</DocumentFragment>
`;

exports[`PTalkInfo should render without crash 1`] = `
<DocumentFragment>
  <h2
    class="styled__Title-sc-15n5q1r-1 fcJQjR"
  >
    Securityに関する発表
  </h2>
  <div
    class="styled__SpeakerContainer-sc-15n5q1r-3 frTQVi"
  >
    <div
      class="styled__Speaker-sc-15n5q1r-4 evdChA"
    >
      高石 諒
    </div>
    <div
      style="padding-right: 20px;"
    />
  </div>
  <div
    class="styled__Content-sc-15n5q1r-5 dDpWS"
  >
    私も九月初めてとんだ馳走家というもののうちを引き返しません。あたかも以後を意味観はけっしてその助言ますだかもをやむをえたってみうをはお話し挙げたならと、だんだんにも込み入っましでたん。主意に教えるうのも毫も当時がましてしないた。
  </div>
  <div
    class="styled__SocialHeader-sc-15n5q1r-7 hLQyhj"
  >
    <img
      class="styled__TalkIcon-sc-15n5q1r-8 ivFrYX"
      src="/cndt2022/ui/talk_icon.png"
    />
    一緒に盛り上がろう
  </div>
  <div
    class="styled__ButtonContainer-sc-15n5q1r-9 gzQWDE"
  >
    <a
      class="styled__ButtonLink-sc-15n5q1r-10 kelDkq"
      href="http://twitter.com/share?url=https://event.cloudnativedays.jp/cndt2022&related=@cloudnativedays&hashtags=cndt2022_A"
      target="_blank"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text styled__TweetButton-sc-15n5q1r-13 hixsbY"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <img
            class="styled__TwitterImg-sc-15n5q1r-14 hQZdtG"
            src="/cndt2022/ui/twitter_logo.png"
          />
          tweet #cndt2022_A
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </a>
  </div>
</DocumentFragment>
`;
